# Brand-Guardian-AI

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_brandgurdian.yml
backend/scripts/: index_documents.py
backend/src/api/: server.py
backend/src/graph/: nodes.py  state.py
backend/src/services/: rule_indexer.py  video_indexer.py
frontend/: app.html  architecture.html  brand_guardian.html  index.html
